Store postcode/constituency in session
So people can only easily look at their own, and they concentrate
on that.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <p class="lead">Enter your postcode, to start sifting through
     the CVs of people applying for the job of being your MP.</p>
 
-    <form action="/constituency" method="GET">
+    <form action="/set_postcode" method="GET">
         <div class="form-group">
           <input id="postcode" name="postcode" placeholder="Postcode" class="form-control">
         </div>
