--- a/templates/applicants.html
+++ b/templates/applicants.html
@@ -8,7 +8,7 @@
     </p>
 
     {% for applicant in applicants %}
-      <p>{{ applicant.name }}</p>
+        <p>{{ applicant.name }} &mdash; {{ applicant.party}}</p>
     {% endfor %}
 
 {% endblock %}
