Invite user to add email of those without

--- a/templates/applicants.html
+++ b/templates/applicants.html
@@ -1,15 +1,48 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h1>{{ name }}</h1>
-    <p><a href="/clear_postcode">I live somewhere else</a></p>
+    <div id="applicants">
 
-    <p class="lead">These people have applied for the job of being 
-    Member of Parliament in your constituency.
-    </p>
+        <h1>Applicants for job of MP for <br>{{ constituency.name }}</h1>
+        <p><a href="/clear_postcode">I live somewhere else</a></p>
 
-    {% for applicant in applicants %}
-        <p>{{ applicant.name }} &mdash; {{ applicant.party}}</p>
-    {% endfor %}
+        <div class="no_email">
+
+            <h2>Help find the emails of these applicants</h2>
+
+            <p>So you can later email them to ask them to send in their CV.</p>
+
+            <div class="applicant_list">
+                {% for applicant in applicants_no_email %}
+                <div class="applicant">
+                    <a href="https://yournextmp.com/person/{{ applicant.id }}/" class="btn btn-default" target="_blank">Add email</a>
+                    <span class="name">{{ applicant.name }}</span> &mdash; <span class="party">{{ applicant.party}}</span>
+                </div>
+                {% endfor %}
+            </div>
+
+            <p>(those "add" buttons will take you over to the right place on <a href="https://yournextmp.com/">YourNextMP</a>, 
+            where you need to register, then you can add their emails! Your help is <i>much</i> appreciated)
+
+        </div>
+
+        <div class="no_cv">
+
+            <h2>Ask these applicants to send in their CV</h2>
+
+
+            <div class="applicant_list">
+                {% for applicant in applicants %}
+                <div class="applicant">
+                    <a href="/email" class="btn btn-default" target="_blank">Email them</a>
+                    <span class="name">{{ applicant.name }}</span> &mdash; <span class="party">{{ applicant.party}}</span>
+                </div>
+                {% endfor %}
+            </div>
+
+ 
+        </div>
+
+    </div>
 
 {% endblock %}
 
