--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,27 @@
-.lead {
+#front .lead {
     margin-top: 48px;
+}
+
+
+#applicants h2 {
+    margin-top: 48px;
+}
+
+.applicant_list {
+    margin-top: 20px;
+}
+
+#applicants .no_email p {
+    margin-top: 10px;
+}
+
+.applicant_list a {
+    margin-right: 8px;
+}
+
+#applicants .applicant {
+    margin-top: 10px;
+}
+#applicants .applicant .name {
+    font-size: 20px;
 }
