--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>CVs of MP candidates</title>
 
-    <link href="/static/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/style.css" rel="stylesheet">
-
+        <link href="/static/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -33,5 +33,7 @@
                </div>
             </div>
         </div>
+
     </body>
+
 </html>
