Better copy I hope

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 {% block body %}
     <div id="front">
 
-        <h1>If you were hiring somebody at work, you'd look at their CVs, right?</h1>
-        <h2>So why don't we look at our MP's CV?</h2>
+        <h1>When hiring somebody, employers usually look at CVs.</h1>
 
-        <p class="lead">Enter your postcode, to start sifting through
-        the CVs of people applying for the job of being your MP.</p>
+        <h2>Let's do the same for your MP this May.</h2>
+
+        <p class="lead">Enter your postcode to start sifting CVs of applicants.
+        </p>
 
         <form action="/set_postcode" method="GET">
             <div class="form-group">
