--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,10 @@
+/* / */
+
 #front .lead {
     margin-top: 48px;
 }
 
+/* /applicants */
 
 #applicants h2 {
     margin-top: 48px;
@@ -20,8 +23,14 @@
 }
 
 #applicants .applicant {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #applicants .applicant .name {
     font-size: 20px;
 }
+#applicants .applicant .emailthem {
+    margin-top: 4px;
+    float: left;
+}
+
+
