--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,8 @@
 
     <body>
 
+        <div class="text-center alert alert-warning">MP CV is still pre-alpha. Email <a href="mailto:francis@flourish.org">Francis Irving</a> with comments, questions. Send pull requests to <a href="https://github.com/frabcus/mpcv">frabcus/mpcv</a>.</div>
+
         <div id="wrap">
 
             <div id="masthead">
