--- a/templates/applicants.html
+++ b/templates/applicants.html
@@ -15,7 +15,7 @@
                 <div class="applicant">
                     <a href="/email" class="btn btn-default emailthem" target="_blank">Email them</a>
                     <span class="name">{{ applicant.name }}</span> &mdash; <span class="party">{{ applicant.party}}</span>
-                    <br><a href="/upload_cv/{{ applicant.id }}">This is me, add my CV</a>
+                    <br><a href="/upload_cv/constituency/{{ constituency.id }}/applicant/{{ applicant.id }}">This is me, add my CV</a>
                 </div>
                 {% endfor %}
             </div>
