--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 {% block body %}
     <div id="front">
 
-        <h1>When hiring somebody, employers usually look at CVs.</h1>
+        <h1>&ldquo;To apply, please send your CV.&rdquo;</h1>
 
-        <h2>Let's do the same for your MP this May.</h2>
+        <h2>Unless you're applying to be an MP&hellip; Until now!</h2>
 
-        <p class="lead">Enter your postcode to start sifting CVs of applicants.
+        <p class="lead">
+            Enter your postcode to see CVs of candidates where you live.
         </p>
 
         <form action="/set_postcode" method="GET">
