Send confirmation email to candidates

--- a/templates/check_email.html
+++ b/templates/check_email.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h1>Check your email</h1>
+<h1>Check your email!</h1>
 
         <p class="lead">
-                We've sent you a link. Please click it to login.
+                We've sent you a link. Please click it, then upload your CV.
         </p>
 
         <p>It can sometimes take a while for emails to arrive. Please be patient, and
