--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -4,9 +4,16 @@
 
         <h1>Hi, {{ applicant.name }}!</h1>
 
-        <p class="lead">Upload your CV here</p>
+        <p class="lead">We need to confirm your email first.</p>
 
-        <p><span id="applicant_email">{{ applicant.email }}</span></p>
+        <form action="/upload_cv/{{ applicant.id }}" method="POST">
+            <div class="form-group">
+              <button type="submit" class="btn btn-default">Confirm email</button>
+            </div>
+        </form>
+
+        <p>We will send an email to <strong>{{ applicant.email }}</strong>. 
+        </p>
 
     </div>
 {% endblock %}
