--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div id="upload_cv">
 
-        <h1>Hi, {{ applicant.name }}!</h1>
+        <h1>Hi, {{ candidate.name }}!</h1>
 
         <p class="lead">Drop your CV in here.</p>
 
