Tweak to front page wording

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
         <h1>&ldquo;To apply, please send your CV.&rdquo;</h1>
 
-        <h2>Unless you're applying to be an MP&hellip; Until now!</h2>
+        <h2>Unless you want to be an MP&hellip; Until now!</h2>
 
         <p class="lead">
             Enter your postcode to see CVs of candidates where you live.
