--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="form-group">
-              <button type="submit" class="btn btn-default">View candidates</button>
+              <button type="submit" class="btn btn-primary">View candidates</button>
             </div>
         </form>
 
