--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,7 @@
     <head>
         <title>CVs of MP candidates</title>
 
-        <script src="/static/jquery-1.11.2.min.js"></script>
-
-        <link href="/static/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/style.css" rel="stylesheet">
 
     </head>
