--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -6,6 +6,46 @@
 
         <p class="lead">Drop your CV in here.</p>
 
+        <span class="btn btn-primary fileinput-button">
+            <i class="glyphicon glyphicon-plus"></i>
+            <span>Select files...</span>
+            <input id="fileupload" name="files[]" multiple="" type="file" data-url="{{ upload_link }}">
+        </span>
+
+        <p>
+            <div id="progress">
+                <div class="bar" style="width: 0%;"></div>
+            </div>
+        </p>
+
+        <script src="/static/jquery-1.11.2.min.js"></script>
+        <script src="/static/jquery.ui.widget.js"></script>
+        <script src="/static/jquery.iframe-transport.js"></script>
+        <script src="/static/jquery.fileupload.js"></script>
+
+        <script>
+                $(function () {
+                    $('#fileupload').fileupload({
+                        dataType: 'json',
+                        done: function (e, data) {
+                            alert("done" + data)
+                            $.each(data.result.files, function (index, file) {
+                                $('<p/>').text(file.name).appendTo(document.body);
+                            });
+                        },
+                        progressall: function (e, data) {
+                            var progress = parseInt(data.loaded / data.total * 100, 10);
+                            $('#progress .bar').css(
+                                'width',
+                                progress + '%'
+                            );
+                        }
+                    });
+                });
+        </script>
+
+        <p>A Word document or a PDF is best.</p>
+
     </div>
 {% endblock %}
 
