--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
         <form action="/set_postcode" method="GET">
             <div class="form-group">
-              <input id="postcode" name="postcode" placeholder="Postcode" class="form-control">
+              <input id="postcode" name="postcode" placeholder="Postcode" class="form-control" autofocus>
             </div>
 
             <div class="form-group">
