Get file upload part to work
Still need to save it somewhere and preview

--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -9,7 +9,7 @@
         <span class="btn btn-primary fileinput-button">
             <i class="glyphicon glyphicon-plus"></i>
             <span>Select files...</span>
-            <input id="fileupload" name="files[]" multiple="" type="file" data-url="{{ upload_link }}">
+            <input id="fileupload" name="file" type="file" data-url="{{ upload_link }}">
         </span>
 
         <p>
