--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@
 }
 
 #wrap {
-    margin-bottom: 5em;
+    margin-bottom: 48px;
 }
 
 /* /candidates */
@@ -74,6 +74,10 @@ html,body        {height:100%;}
 .frame_inner_wrapper        {position:relative;}
 .frame_inner_wrapper .ratio {display:block;width:100%;height:auto;}
 .frame_inner_wrapper iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
+
+.frame_outer_wrapper {
+    margin-top: 48px;
+}
 
 .uploaded {
     text-color: #aaa;
