--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-    <div id="candidates">
+    <div id="show_cv">
         <h1>{{ candidate.name }}'s CV</h1>
 
         <!-- {{ cv.name }} -->
