Error handling for file upload

--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -31,7 +31,11 @@
                         console.log("done file upload ok, redirecting")
                         location.href = "{{ successful_link }}"
                     },
-                    progressall: function (e, data) {
+                    fail: function (e, data) {
+                        $('.alert-danger').remove()
+                        $('#upload_cv').prepend('<div class="alert alert-danger">There was a problem uploading your CV. Please try again later.</div>')
+                    },
+                     progressall: function (e, data) {
                         var progress = parseInt(data.loaded / data.total * 100, 10);
                         $('#progress .bar').css(
                             'width',
