--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -2,8 +2,25 @@
 {% block body %}
     <div id="candidates">
 
-        <h1>Candidates for job of MP for <br>{{ constituency.name }}</h1>
-        <p><a href="/clear_postcode">I live somewhere else</a></p>
+        <h1>Candidates for job of MP of<br>{{ constituency.name }}</h1>
+
+        {% if candidates_have_cv %}
+        <div class="no_cv">
+
+            <!-- <h2>Ask these candidates to send in their CV</h2> -->
+            <h2>View submitted CVs</h2>
+
+            <div class="candidate_list">
+                {% for candidate in candidates_have_cv %}
+                <div class="candidate">
+                    <a href="/show_cv/{{ candidate.id }}" class="btn btn-default">View CV</a>
+                    <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
+                </div>
+                {% endfor %}
+            </div>
+
+        </div>
+        {% endif %}
 
         {% if candidates_no_email %}
         <div class="no_email">
@@ -13,7 +30,7 @@
             <div class="candidate_list">
                 {% for candidate in candidates_no_email %}
                 <div class="candidate">
-                    <a href="https://yournextmp.com/person/{{ candidate.id }}/" class="btn btn-default" target="_blank">Add email</a>
+                    <a href="https://yournextmp.com/person/{{ candidate.id }}/" class="btn btn-primary" target="_blank">Add email</a>
                     <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
                 </div>
                 {% endfor %}
@@ -30,14 +47,14 @@
         <div class="no_cv">
 
             <!-- <h2>Ask these candidates to send in their CV</h2> -->
-            <h2>Add your CV, if you're an candidate</h2>
+            <h2>Add your CV, if you're a candidate</h2>
 
             <div class="candidate_list">
                 {% for candidate in candidates %}
                 <div class="candidate">
                     <!-- <a href="/email" class="btn btn-default emailthem" target="_blank">Email them</a> -->
+                    <a href="/upload_cv/{{ candidate.id }}" class="btn btn-default">Add my CV</a>
                     <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
-                    <br><a href="/upload_cv/{{ candidate.id }}">This is me, add my CV</a>
                 </div>
                 {% endfor %}
             </div>
