--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -8,7 +8,7 @@
 
         <form action="/upload_cv/{{ candidate.id }}" method="POST">
             <div class="form-group">
-              <button type="submit" class="btn btn-default">Confirm email</button>
+              <button type="submit" class="btn btn-primary">Confirm email</button>
             </div>
         </form>
 
