--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -13,7 +13,7 @@
             <div class="candidate_list">
                 {% for candidate in candidates_have_cv %}
                 <div class="candidate">
-                    <a href="/show_cv/{{ candidate.id }}" class="btn btn-default">View CV</a>
+                    <a href="/show_cv/{{ candidate.id }}" class="btn btn-primary">View CV</a>
                     <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
                 </div>
                 {% endfor %}
@@ -52,8 +52,8 @@
             <div class="candidate_list">
                 {% for candidate in candidates %}
                 <div class="candidate">
-                    <!-- <a href="/email" class="btn btn-default emailthem" target="_blank">Email them</a> -->
-                    <a href="/upload_cv/{{ candidate.id }}" class="btn btn-default">Add my CV</a>
+                    <!-- <a href="/email" class="btn btn-primary emailthem" target="_blank">Email them</a> -->
+                    <a href="/upload_cv/{{ candidate.id }}" class="btn btn-primary">Add my CV</a>
                     <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
                 </div>
                 {% endfor %}
