Link back to see more CVs

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -2,7 +2,10 @@
 {% block body %}
     <div id="candidates">
 
-        <h1>Candidates for job of MP of<br>{{ constituency.name }}</h1>
+        <h1>
+            Candidates for job of MP of<br>{{ constituency.name }}
+        </h1>
+
 
         {% if candidates_have_cv %}
         <div class="no_cv">
@@ -37,7 +40,7 @@
             </div>
 
             <p>
-                The "add" buttons take you to <a href="https://yournextmp.com/">YourNextMP</a>, log in and edit the email.
+                The "add" buttons take you to <a href="https://yournextmp.com/">YourNextMP</a>, log in and edit their email.
             </p>
 
         </div>
