--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,7 +65,7 @@
 
             {% if g.debug_email %}
                 <div class="text-center alert alert-info" style="margin-top: 1em;">
-                      <p>Debug email enabled, all outbound emails going to <b>{{ g.debug_email }}</b>.</p>
+                      <p>Debug email enabled, all outbound emails going to <b>{{ g.debug_email }}</b></p>
                 </div>
             {% endif %}
 
