--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -1,9 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
     <div id="show_cv">
-        <h1>{{ candidate.name }}'s CV</h1>
+        <a href="/candidates" class="btn btn-primary"><i class="glyphicon glyphicon-arrow-left"></i> More candidates</a>
 
-        <!-- {{ cv.name }} -->
+        <h1>{{ candidate.name }}'s CV</h1>
+        <h2>Candidate for MP of {{ candidate.constituency_name }} </h2>
 
         <div class="frame_outer_wrapper">
             <div class="frame_inner_wrapper">
