Various minor things

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
         <div class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <a href="../" class="navbar-brand">Democracy Club CVs</a>
+              <a href="../" class="navbar-brand">Democracy Club CV</a>
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
               <!-- <ul class="nav navbar-nav">
