--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -11,6 +11,7 @@
                 <!-- a transparent image is preferable -->
                 <img class="ratio" src="/static/transparent.gif"/>
                 <iframe src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&embedded=true" frameborder="0" allowfullscreen></iframe>
+                <!-- CV uploaded: {{ cv.date }} -->
             </div>
         </div>
 
