About page makes it look all proper

--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,11 @@ footer ul.pull-right li:last-child {
     margin-top: 32px;
 }
 
+/* /about */
+
+#about {
+}
+
 /* /candidates */
 
 #candidates > div {
