--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %} Candidate CVs for MP of {{ constituency.name }} {% endblock %}
 {% block body %}
     <div id="candidates">
 
