--- a/templates/check_email.html
+++ b/templates/check_email.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
+{% block title %} Check your email! {% endblock %}
 {% block body %}
 
-<h1>Check your email!</h1>
+        <h1>Check your email!</h1>
 
         <p class="lead">
                 We've sent you a link. Please click it, then upload your CV.
