--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
+{% block title %} Oh dear! {% endblock %}
 {% block body %}
     <h1>Oh dear!</h1>
 
-    <p>Something went wrong. We're really sorry. Please try again later.</p>
+    <p class="lead">Something went wrong. We're really sorry. </p>
+    
+    <p>Please try again later, or contact us..</p>
 {% endblock %}
 
