--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>CVs of MP candidates</title>
+        <title>{% block title %}{% endblock %} - Democracy Club CV</title>
 
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/bootstrap/css/bootswatch.min.css" rel="stylesheet">
