--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,20 @@
 {% block body %}
     <div id="front">
 
-        <h1>&ldquo;To apply, please send your CV.&rdquo;</h1>
+        <!-- <h1>&ldquo;To apply, please send your CV.&rdquo;</h1>
 
         <h2>Unless you want to be an MP&hellip; Until now!</h2>
+        -->
+
+        <h1>Candidates, at least share your CV!</h1>
+
+        <p class="lead">Following the scandal of Jack Straw and Malcolm Rifkind
+        being paid to lobby, this site makes it easy for MP candidates to
+        share their CV with voters.</p>
+
 
         <p class="lead">
-            Enter your postcode to see CVs of candidates where you live.
+            Enter your postcode to upload your CV, or see others:
         </p>
 
         <form action="/set_postcode" method="GET">
@@ -21,6 +29,22 @@
             </div>
         </form>
 
+        <h3>MP ethics chief: tell voters about your second jobs </h3>
+
+        <p>Lord Bew, the chair of the Committee on Standards in Public Life, 
+        said:
+        </p>
+
+        <blockquote>
+            “The public’s belief in high standards in public life has dropped and is depressingly low.”
+        </blockquote>
+
+        <p>We think he'd like you to at least share your basic career history!
+        Read the <a href="http://www.theguardian.com/politics/2015/feb/28/ethics-chief-tell-voters-about-your-second-jobs-general-election-lord-bew-malcolm-rifkind-jack-straw">full newspaper article</a> about what he said.</p>
+
     </div>
+
 {% endblock %}
 
+{% block sidebar %}
+{% endblock %}
