--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,8 +44,10 @@
 
                 <div class="contentwrap"> {% block body %}{% endblock %} </div>
             </div>
-            <div class="col-md-4 col-lg-5">
-                <!-- sidebar maybe -->
+            <div class="col-md-1 col-lg-1">
+            </div>
+            <div class="col-md-3 col-lg-4">
+                <div class="sidebarwrap"> {% block sidebar %}{% endblock %} </div>
             </div>
           </div>
 
