--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
         <p>Not quite a CV. We think a full CV will cover some of that, and
         also give useful background on education, job history and skills.
         The recommendation was followed up by 
-        <a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">government uidance</a>.
+        <a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">government guidance</a>.
         </p>
 
 
