--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,18 @@
         <h2>Unless you want to be an MP&hellip; Until now!</h2>
         -->
 
-        <h1>Candidates, at least share your CV!</h1>
+        <h1>Candidates, share your CV!</h1>
 
         <p class="lead">Following the scandal of Jack Straw and Malcolm Rifkind
-        being paid to lobby, this site makes it easy for MP candidates to
-        share their CV with voters.</p>
+        being paid to lobby, distrust in politicians is even lower.
+        </p>
+
+        <p class="lead">This site makes it easy for MP candidates to make up for that,
+        by sharing their CV with voters.</p>
 
 
         <p class="lead">
-            Enter your postcode to upload your CV, or see others:
+            Enter your postcode to upload your CV, or see all CVs:
         </p>
 
         <form action="/set_postcode" method="GET">
