--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         being paid to lobby, distrust in politicians is even lower.
         </p>
 
-        <p class="lead">This site makes it easy for MP candidates to make up for that,
+        <p class="lead">This site makes it easy for MP candidates to help fix that,
         by sharing their CV with voters.</p>
 
 
