--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>{% block title %}{% endblock %} - Democracy Club CV</title>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/bootstrap/css/bootswatch.min.css" rel="stylesheet">
         <link href="/static/style.css" rel="stylesheet">
@@ -10,11 +10,16 @@
     </head>
 
     <body>
-
         <div class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
               <a href="../" class="navbar-brand">Democracy Club CV</a>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
+                     <span class="sr-only">Toggle navigation</span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                   </button>
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
               <!-- <ul class="nav navbar-nav">
@@ -76,6 +81,8 @@
           </footer>
 
         </div>
+        <script src="/static/jquery-1.11.2.min.js"></script>
+        <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     </body>
 
 </html>
