--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,11 @@
         <div class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <a href="../" class="navbar-brand">Democracy Club CV</a>
+              <a href="../" class="navbar-brand">
+                  <img src="/static/dc_logo.png">
+                  Democracy Club CV
+              </a>
+
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
                      <span class="sr-only">Toggle navigation</span>
                      <span class="icon-bar"></span>
