Simplifying front page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,16 +10,12 @@
 
         <h1>Candidates, share your CV!</h1>
 
-        <p class="lead">Following the scandal of Jack Straw and Malcolm Rifkind
-        being paid to lobby, distrust in politicians is even lower.
-        </p>
-
-        <p class="lead">This site makes it easy for MP candidates to help fix that,
-        by sharing their CV with voters.</p>
+        <p class="lead">This site makes it easy for MP candidates to increase
+        trust in politics, by sharing their CV with voters.</p>
 
 
         <p class="lead">
-            Enter your postcode to upload your CV, or see all CVs:
+            Enter your postcode.
         </p>
 
         <form action="/set_postcode" method="GET">
@@ -32,18 +28,6 @@
             </div>
         </form>
 
-        <h3>MP ethics chief: tell voters about your second jobs </h3>
-
-        <p>Lord Bew, the chair of the Committee on Standards in Public Life, 
-        said:
-        </p>
-
-        <blockquote>
-            “The public’s belief in high standards in public life has dropped and is depressingly low.”
-        </blockquote>
-
-        <p>We think he'd like you to at least share your basic career history!
-        Read the <a href="http://www.theguardian.com/politics/2015/feb/28/ethics-chief-tell-voters-about-your-second-jobs-general-election-lord-bew-malcolm-rifkind-jack-straw">full newspaper article</a> about what he said.</p>
 
     </div>
 
